[tool.poetry]
name = "pytube_stuff"
version = "0.1.0"
description = ""
authors = ["Timothy Charboneau <charboneau@protonmail.ch>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pytube = "n"
requests = "^2.26.0"
mutagen = "^1.45.1"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
