[tool.poetry]
name = "autotube"
version = "0.0.1"
description = "does some yt stuff"
authors = ["charboneaut"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
requests = "^2.26.0"
mutagen = "^1.45.1"
moviepy = "^1.0.3"
pytube = "n"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
